--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 deploy:
   provider: heroku
   api_key:
-    secure: "SECUREKEY_BROWN_KEY"
+    secure: "70705FCBAB6985E081E2005D526A9BACFE176246E5A1D59BDB4372521FE2B0B4,14C7DDC0682AB0E18631DC861AF0F261241E2BFEE55A2F4E0A3C51F95B1B35A5"
   app: phpconference
   on: master
 
