--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
 - travis_retry composer self-update
 - travis_retry composer install --prefer-source --no-interaction
 - travis_retry npm install
+- travis_retry npm install --dev
 deploy:
   provider: heroku
   api_key:
@@ -12,3 +13,4 @@ deploy:
   app: phpconference
   skip_cleanup: true
 script: bin/phpunit
+script: gulp
