--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ php:
 before_script:
 - travis_retry composer self-update
 - travis_retry composer install --prefer-source --no-interaction
-- travis_retry npm install --dev
+- travis_retry npm install
+cache:
+  yarn: true
 deploy:
   provider: heroku
   api_key:
