--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ php:
 before_script:
 - travis_retry composer self-update
 - travis_retry composer install --prefer-source --no-interaction
-- travis_retry npm install
+- travis_retry npm install -g gulp
 cache:
   yarn: true
+  directories:
+    - $HOME/.composer/cache
 deploy:
   provider: heroku
   api_key:
