--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: php
 php:
-- 5.6
+  - 5.6
 before_script:
-- travis_retry composer self-update
-- travis_retry composer install --prefer-source --no-interaction
-- travis_retry npm install -g gulp
+  - travis_retry composer self-update
+  - travis_retry composer install --prefer-source --no-interaction
+  - npm install -g gulp
 cache:
   yarn: true
   directories:
