--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
-  - npm install -g gulp
+  - npm install --save-dev gulp-load-plugins
   - npm install --save-dev gulp
 deploy:
   provider: heroku
