--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ php:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
-  - npm install --save-dev gulp-load-plugins
-  - npm install --save-dev gulp
+  - npm install
 deploy:
   provider: heroku
   api_key:
